--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,7 +6,7 @@
   <label>Preço:
     <input #productPrice />
   </label>
-  <button (click)="add(productName.value, productPrice.value); heroName.value=''; productPrice.value=''">
+  <button (click)="add(productName.value, productPrice.value); productName.value=''; productPrice.value=''">
     Adicionar
   </button>
 </div>
