--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<h1>{{title}}</h1>
-<nav>
-    <a routerLink="/products">Produtos</a>
-    <a routerLink="/sales">Vendas</a>
-</nav>
-<router-outlet></router-outlet>
+<div class="container">
+    <h1>{{title}}</h1>
+    <nav class="nav navbar-left">
+        <a class="nav-link" routerLink="/products">Produtos</a>
+        <a class="nav-link" routerLink="/sales">Vendas</a>
+    </nav>
+    <router-outlet></router-outlet>
+</div>
